--- a/expense_tracker_frontend/package.json
+++ b/expense_tracker_frontend/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.7.2",
     "bootstrap": "^3.3.5",
     "jquery": "^3.7.1",
+    "mobx": "^6.13.0",
+    "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1"
