--- a/expense_tracker_frontend/package.json
+++ b/expense_tracker_frontend/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "bootstrap": "^3.3.5",
+    "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
+    "@types/jquery": "^3.5.30",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
