--- a/expense_tracker_frontend/package.json
+++ b/expense_tracker_frontend/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "bootstrap": "^3.3.5",
+    "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "mobx": "^6.13.0",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1"
   },
@@ -30,6 +31,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "sass": "^1.84.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
