--- a/expense_tracker_frontend/package.json
+++ b/expense_tracker_frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "jquery": "^3.7.1",
     "mobx": "^6.13.0",
     "mobx-react-lite": "^4.0.7",
