--- a/expense_tracker_frontend/package.json
+++ b/expense_tracker_frontend/package.json
@@ -19,7 +19,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "vite-plugin-checker": "^0.9.1"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
