--- a/expense_tracker_frontend/package.json
+++ b/expense_tracker_frontend/package.json
@@ -33,8 +33,12 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "prettier": "3.5.3",
     "sass": "^1.84.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
+  },
+  "prettier": {
+    "bracketSpacing": false
   }
 }
