--- a/expense_tracker_frontend/package.json
+++ b/expense_tracker_frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
+    "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.24.1",
     "vite-plugin-checker": "^0.9.1"
   },
@@ -27,6 +28,7 @@
     "@types/jquery": "^3.5.30",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-modal-image": "^2.6.4",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
