--- a/expense_tracker_frontend/package.json
+++ b/expense_tracker_frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.24.1",
     "vite-plugin-checker": "^0.9.1"
