--- a/expense_tracker_frontend/package.json
+++ b/expense_tracker_frontend/package.json
@@ -22,6 +22,7 @@
     "react-dropzone": "^14.3.8",
     "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.24.1",
+    "uuid": "^10.0.0",
     "vite-plugin-checker": "^0.9.1"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal-image": "^2.6.4",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
